tests/fixtures/invalid/int_mod_str.py
# Cannot modulo Int and Str
x: int = 1 % "hello"
